feat: time bucket by album id
